--- a/requirements.txt
+++ b/requirements.txt
@@ -1,106 +1,43 @@
 absl-py==0.11.0
-asgiref==3.2.10
-astroid==2.3.3
-astropy==4.1rc1
 astunparse==1.6.3
-attrs==19.3.0
-backcall==0.1.0
 cachetools==4.1.1
-certifi==2019.9.11
+certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
-cloudpickle==1.3.0
-colorama==0.4.3
-confuse==1.1.0
-cycler==0.10.0
-decorator==4.4.2
-docutils==0.15.2
 Flask==1.1.2
-future==0.18.2
 gast==0.3.3
 google-auth==1.23.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
-grpcio==1.33.2
-gunicorn==20.0.4
-gym==0.17.1
+grpcio==1.34.0
 h5py==2.10.0
-htmlmin==0.1.12
-idna==2.8
-imagehash==4.1.0
-importlib-metadata==1.6.0
-ipykernel==5.3.0
-ipython==7.15.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.0a0
-isort==4.3.21
+idna==2.10
+importlib-metadata==3.1.1
 itsdangerous==1.1.0
-jedi==0.17.0
-jinja2==3.0.0a1
-jmespath==0.9.4
-joblib==0.14.1
-jsonschema==3.2.0
-jupyter-client==6.1.3
-jupyter-core==4.6.3
+Jinja2==2.11.2
 Keras-Preprocessing==1.1.2
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.3
 Markdown==3.3.3
-markupsafe==2.0.0a1
-mccabe==0.6.1
-missingno==0.4.2
-more-itertools==8.4.0
-mysqlclient==1.4.4
-nbformat==5.0.6
-networkx==2.4
-numba==0.50.0rc1
-numpy==1.18.1
+MarkupSafe==1.1.1
+numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
-pandas==1.0.1
-pandas-profiling==2.8.0
-parso==0.7.0
-phik==0.10.0
-pickleshare==0.7.5
-pillow==7.1.2
-prompt-toolkit==3.0.5
-protobuf==3.10.0
-psycopg2==2.8.5
+pandas==1.1.4
+Pillow==8.0.1
+protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pyglet==1.5.0
-pygments==2.6.1
-pylint==2.4.4
-pyparsing==2.4.6
-pyrsistent==0.16.0
 python-dateutil==2.8.1
-pytz==2019.3
-pywavelets==1.1.1
-pyyaml==5.3.1
-pyzmq==19.0.1
-requests==2.22.0
+pytz==2020.4
+requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
-s3transfer==0.2.1
-scikit-learn==0.22.1
-seaborn==0.10.1
-selenium==3.141.0
-six==1.12.0
-sklearn==0.0
-sqlparse==0.3.0
-tangled-up-in-unicode==0.0.6
+six==1.15.0
+tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
-tornado==6.0.4
-tqdm==4.46.1
-traitlets==4.3.3
-typed-ast==1.4.0
-urllib3==1.25.6
-visions==0.4.4
-wcwidth==0.2.3
+urllib3==1.26.2
 Werkzeug==1.0.1
-widgetsnbextension==4.0.0a0
-wrapt==1.11.2
-zipp==3.1.0
+wrapt==1.12.1
+zipp==3.4.0
